# H1st

./: .gitignore  .prospector.yaml  MANIFEST.in  pyproject.toml  setup.cfg  setup.py
examples/Trust/models/: breast_cancer.py  wine_quality.py
h1st/: __init__.py  api.py  metadata.json  requirements.txt
h1st/client/: __init__.py
h1st/django/: api.py  urls.py
h1st/django/data/: admin.py  apps.py  models.py
h1st/django/data/api/rest/: views.py
h1st/django/data/migrations/: 0006_remove_NamedDataSet.py
h1st/django/data_mgmt/: __init__.py  admin.py  apps.py  models.py  urls.py  util.py
h1st/django/data_mgmt/api/: __init__.py
h1st/django/data_mgmt/api/rest/: queries.py  views.py
h1st/django/data_mgmt/migrations/: 0004_NamedDataSet.py  0005_optional_unique_name.py  0007_TextDataSet.py  0008_JSONDataSet_in_db_json.py  0009_DataSet_global_url_and_local_path.py  0010_JSONDataSet_in_db_json.py  0011_remove_FileStoredDataSet.py  0012_TextDataSet_in_db_text.py  0013_TextDataSet_in_db_text.py  0014_NumPyArray_shape.py  0015_LiveDataSource.py
h1st/django/data_mgmt/models/: __init__.py  base.py  csv.py  json.py  live.py  numpy.py  pandas.py  parquet.py  text.py  tfrecord.py
h1st/django/model/: admin.py  apps.py  urls.py  views.py
h1st/django/model/api/: __init__.py
h1st/django/model/api/rest/: serializers.py  views.py
h1st/django/model/migrations/: 0008_ModelParams.py  0009_MLModel.py  0010_MLModel_artifact_global_url.py  0013_PretrainedHuggingFaceTransformer.py
h1st/django/model/models/: __init__.py  base.py  graph.py  workflow.py
h1st/django/model/models/cloud_svc/: __init__.py  base.py
h1st/django/model/models/cloud_svc/google/: translation.py
h1st/django/model/models/ml/: __init__.py  base.py  hugging_face.py
h1st/django/model/models/ml/hugging_face/: __init__.py
h1st/django/model/models/ml/keras/: __init__.py
h1st/django/model/models/ml/keras/pre_trained/: image_classification.py
h1st/django/model/scripts/: setup_google_cloud_svc_models.py  setup_pretrained_keras_models.py
h1st/django/modeling/: __init__.py  admin.py  apps.py  urls.py  views.py
h1st/django/modeling/api/: __init__.py
h1st/django/modeling/api/rest/: queries.py  views.py
h1st/django/modeling/migrations/: 0007_optional_unique_name.py  0009_MLModel.py  0011_PyLoadablePreTrainedMLModel.py  0012_HuggingFacePreTrainedTransformer.py  0014_PyLoadablePreTrainedMLModel_py_loader_module_and_qualname.py  0015_PreTrainedKerasImageNetClassifier.py  0016_PreTrainedKerasImageNetClassifier.py  0017_CloudServiceModel.py  0018_GoogleCloudTranslationServiceModel_GoogleTranslateServiceModel.py  0019_PreTrainedTorchImageNetClassifier.py  0020_PreTrainedTFHubTransformer.py  0021_PreTrainedHuggingFaceImageClassifier.py  0022_MLModel_artifact_local_path.py  0023_PreTrainedHuggingFaceTransformer_options.py  0024_PreTrainedTorchVisionImageNetClassifier.py  0025_PreTrainedTorchVisionImageNetClassifier_options.py  0026_PreTrainedHuggingFaceTextClassifier.py  0027_PreTrainedHuggingFaceTokenClassifier.py  0028_PreTrainedHuggingFaceObjectDetector.py  0029_PreTrainedHuggingFaceText2TextGenerator.py  0030_PreTrainedHuggingFaceTextGenerator.py  0031_PreTrainedHuggingFaceTextSummarizer.py  0032_PreTrainedHuggingFaceTranslator.py  0033_PreTrainedHuggingFaceSpeechRecognizer.py  0034_PreTrainedHuggingFaceAudioClassifier.py  0035_PreTrainedHuggingFaceMaskFiller.py  0036_PreTrainedHuggingFaceZeroShotClassifier.py  0037_PreTrainedHuggingFaceQuestionAnswerer.py  0038_KnowledgeModel.py
h1st/django/modeling/modelers/: __init__.py  base.py
h1st/django/modeling/modelers/knowledge/: __init__.py  boolean_logic.py  fuzzy_logic.py
h1st/django/modeling/modelers/ml/: hugging_face.py  keras.py  torch.py
h1st/django/modeling/models/: __init__.py  base.py  graph.py
h1st/django/modeling/models/cloud_svc/: __init__.py  base.py
h1st/django/modeling/models/cloud_svc/google/: translation.py
h1st/django/modeling/models/knowledge/: __init__.py  base.py  boolean_logic.py  fuzzy_logic.py
h1st/django/modeling/models/ml/: __init__.py  base.py  skl.py  tf.py  torch.py
h1st/django/modeling/models/ml/hugging_face/: __init__.py  audio_classification.py  base.py  image_classification.py  mask_filling.py  object_detection.py  question_answering.py  speech_recognition.py  table_question_answering.py  text2text_generation.py  text_classification.py  text_generation.py  text_summarization.py  token_classification.py  translation.py  zero_shot_classification.py
h1st/django/modeling/models/ml/keras/: __init__.py  base.py
h1st/django/modeling/models/ml/keras/pre_trained/: image_classification.py
h1st/django/modeling/models/ml/tf/: __init__.py  base.py
h1st/django/modeling/models/ml/tf/pre_trained/: tf_hub.py
h1st/django/modeling/models/ml/torch/: __init__.py  base.py
h1st/django/modeling/models/ml/torch/pre_trained/: image_classification.py
h1st/django/modeling/models/ml/torch/pre_trained/vision/: image_classification.py
h1st/django/modeling/scripts/: setup_google_cloud_svc_models.py  setup_pretrained_huggingface_models.py  setup_pretrained_keras_models.py  setup_pretrained_tf_hub_models.py  setup_pretrained_torch_vision_models.py
h1st/django/modeling/templates/: h1st-model-dash-ui.html
h1st/django/trust/: admin.py  models.py
h1st/django/trust_vault/: __init__.py  admin.py  apps.py  models.py  urls.py
h1st/django/trust_vault/migrations/: 0002_optional_unique_name.py
h1st/django/util/: __init__.py  config.py  git.py  models.py  pip.py  views.py
h1st/django/util/cli/: __init__.py  h1st  run_command.py
h1st/django/util/cli/aws_eb/: __init__.py
h1st/django/util/cli/aws_eb/.ebextensions/: autoscaling.config  django.config
h1st/django/util/cli/aws_eb/.platform/hooks/prebuild/: update-pip
h1st/fastapi/: combine_score.py
h1st/h1flow/: h1flow.py  h1step.py  h1step_containable.py
h1st/model/: model.py
h1st/trust/: describable.py
tests/trust/: test_describable.py  test_explainable.py
