[tool.poetry]
name = 'H1st'
version = '0.0.6.dev3'
description = 'Human-First AI (H1st)'
authors = ['Aitomatic, Inc. <Engineering@Aitomatic.com>']
license = 'Apache-2.0'
readme = 'README.md'
homepage = 'H1st.ai'
repository = 'GitHub.com/H1st-AI/H1st'
include = ['h1st/*']


[tool.poetry.dependencies]

# PYTHON
# ======
Python = '>= 3.8, < 3.10'


# DATA MANAGEMENT & PROCESSING
# ============================
Pandas = '^1.3.4'
PyArrow = '^6.0.1'
PySpark = '^3.2.0'
Ray = {extras = ['tune'], version = '^1.8.0'}

Pillow = '^8.4.0'   # image processing
# Pillow-SIMD = '^7.0.0'   # complex to install


# MACHINE LEARNING / DEEP LEARNING & RELATED
# ==========================================

# SciKit-Learn & related
Auto-SKLearn = '^0.14.2'
# SciKit-Learn = '^0.24.2'   # >= 1.0 incompat w/ Auto-SKLearn

# TensorFlow & related
TensorFlow = '^2.7.0'
TensorFlow-DataSets = '^4.4.0'
TensorFlow-Hub = '^0.12.0'

# Torch & related
Torch = '^1.10.0'
Torch-Model-Archiver = '^0.4.2'
TorchServe = '^0.4.2'

TorchAudio = '^0.10.0'
TorchText = '^0.11.0'
TorchVision = '^0.11.1'

# Hugging Face & related
DataSets = '^1.15.1'
HuggingFace-Hub = '^0.1.2'   # fixed by DataSets
Transformers = '^4.12.5'

SentencePiece = '^0.1.96'   # Translation
TIMM = '^0.4.12'   # for Object Detection
# Torch-Scatter = '^2.0.9'   # Table Question Answering

# Topological Data Analysis (TDA) & related
GUDHI = '^3.4.1'

# Cloud AI/ML Services
Google-Cloud-Translate = '^3.6.1'
GoogleTrans = '^4.0.0rc1'

# Hyper-Parameter Tuning & related
Bayesian-Optimization = '^1.2.0'
ConfigSpace = '^0.4.20'
Hpbandster = '^0.7.4'
Tabulate = '^0.8.9'

# Model Explainability & related
LIME = '^0.2.0.1'
SHAP = '^0.40.0'

# Pipelines
Kedro = {version = '^0.17.5', markers = "python_version < '3.9'"}


# KNOWLEDGE MODELING
# ==================

# Fuzzy Logic
SciKit-Fuzzy = '^0.4.2'


# MODEL REPOSITORY & RELATED
# ==========================
CloudPickle = '^2.0.0'
JobLib = '^1.1.0'
S3FS = '^2021.11.0'
ULID-Py = '^1.1.0'


# GRAPH PROCESSING & ANALYSIS
# ===========================
GraphViz = '^0.18.2'


# DJANGO & RELATED APPLICATION DEVELOPMENT
# ========================================

# Django Core
Django = '^3.2.9'

# Django Polymorphic Models
Django-Polymorphic = '^3.1.0'

# Django Admin Themes
Django-ForestAdmin = '^1.0.5'
Django-Jazzmin = '^2.4.8'

# Django GraphQL
# Ariadne = '^0.13.0'   # ariadne 0.13.0 depends on graphql-core>=3.1.0
                        # graphene-django 2.15.0 depends on graphql-core<3
Django-RESTQL = '^0.15.1'
Graphene-Django = '^2.15.0'
Py-GQL = '^0.6.1'
# Strawberry-GraphQL = '^0.84.3'   # conflicts with Graphene-Django

# Django REST Framework
DjangoRESTFramework = '^3.12.4'
DRFPasswordless = '^1.5.7'
CoreAPI = '^2.3.3'   # closely related to Django REST Framework

# Django Filtering
Django-Filter = '^21.1'
DjangoRESTFramework-Filters = '1.0.0.dev2'

# Django Object-Level Permissions
Django-Guardian = '^2.4.0'
Rules = '^3.0'

# Django Model Query Optimization
Django-Model-Query-Graphs = '^0.0.5'

# Django Debugging & Query Profiling
Django-Debug-Toolbar = '^3.2.2'
Django-Query-Profiler = '^0.8'
Django-Silk = '^4.2.0'
Kolo = '^1.3.0'

# Django Extensions & Utilities
Django-Compressor = '2.4.1'
Django-Configurations = '^2.3.1'
Django-Environ = '^0.8.1'
Django-Extensions = '^3.1.5'
Django-Model-Utils = '^4.2.0'
Django-Storages = '^1.12.3'

# Django CORS Headers
Django-CORS-Headers = '3.7.0'   # fixed by Django-ForestAdmin 1.0.5

# Application UIs
Django-HTMX = '^1.6.0'

Django-Plotly-Dash = '^1.6.6'
Dash-Bootstrap-Components = '*'   # compat w/ Django-Plotly-Dash
DPD-Static-Support = '^0.0.5'
Django-Bootstrap4 = '^21.1'
WhiteNoise = '^5.3.0'

Gradio = '^2.4.6'

Streamlit = '^1.2.0'
Watchdog = '^2.1.6'   # better performance for Streamlit

# Database Connectors/Drivers
MySQLClient = '^2.1.0'
PsycoPG2-binary = '^2.9.2'

# ASGI Web Servers
Channels = '^3.0.4'
Daphne = '^3.0.2'
GUnicorn = '^20.1.0'
Hypercorn = '^0.12.0'
Starlette = '^0.17.1'
Uvicorn = '^0.15.0'


# COMMAND-LINE INTERFACE (CLI)
# ============================
Click = '^7.1.2'   # aligned with Streamlit
Colored = '^1.4.3'


# JUPYTER
# =======
Jupyter = '^1.0.0'


# OTHER
# =====
GitPython = '^3.1.24'
'Ruamel.YAML' = '^0.17.17'
PSUtil = '^5.8.0'
Python-DotEnv = '^0.19.2'
HiRedis = '2.0.0'   # AWS: "redis-py works best with hiredis, pPlease consider installing"
Requests = '^2.15.1'   # fixed by Django-ForestAdmin
Tqdm = '^4.62.3'


[tool.poetry.dev-dependencies]
commitizen = "^2.19.0"
pytest = "^6.2.5"
pre-commit = "^2.15.0"
tensorflow = "^2.6.0"


[tool.poetry.scripts]
h1st = 'h1st.django.util.cli:h1st'


[build-system]
requires = ['Poetry-Core >= 1.0.0']
build-backend = 'poetry.core.masonry.api'
